Fix initial currentIndex in Tumbler when wrap is set to false

syncCurrentIndex () function assumes that PathView is used as view for,
Tumbler component, and states that actualViewIndex should be 0 while
initialization. This statement is not correct when Tumbler is in
non-wrap mode and uses ListView as view, where currentIndex is set to
-1 by default. Fix actualViewIndex condition according to ListView
logic.

Fixes: QTBUG-84426
Pick-to: 5.15
Pick-to: 6.0
Change-Id: I4ef1e7b45399bf748968490f44b8909f3218d9bc
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>